# psdi-organic-toolkit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci-cron.yml  ci-feature.yml  ci-main.yml  ci-pr.yml  ci-publish-pages.yml  ci-rc-hotfix.yml  ci-release.yml  job-anchore-scan.yml  job-container-push.yml  job-deploy-k8s.yml  job-open-pull-request.yml  job-publish-doc.yml  job-publish-pages.yml  job-tag.yml  job-test-gui.yml  job-test-main.yml  job-test-python.yml  manual-deploy-production.yml
PROJECT_NAME/: __init__.py  app.py  constants.py  file_io.py  log_utility.py  main_gui.py  render_static.py  utils.py
PROJECT_NAME/gui/: env.py  get.py  setup.py
PROJECT_NAME/templates/: index.html
PROJECT_NAME/templates/content/: psdi-common-header.html
deploy/base/: PROJECT_NAME_HYPHEN-admin-role-binding.yml  PROJECT_NAME_HYPHEN-admin-role.yml  PROJECT_NAME_HYPHEN-deployment.yml  PROJECT_NAME_HYPHEN-sa-secret.yml  PROJECT_NAME_HYPHEN-sa.yml  PROJECT_NAME_HYPHEN-service.yml  kustomization.yaml  organic-toolkit-hub-admin-role-binding.yml  organic-toolkit-hub-admin-role.yml  organic-toolkit-hub-deployment.yml  organic-toolkit-hub-sa-secret.yml  organic-toolkit-hub-sa.yml  organic-toolkit-hub-service.yml
deploy/development/: PROJECT_NAME_HYPHEN-ingress.yaml  deployment-env-patch.template.yaml  kustomization.yaml  namespace.yaml
deploy/production/: PROJECT_NAME_HYPHEN-ingress.yaml  deployment-env-patch.template.yaml  kustomization.yaml  namespace.yaml
deploy/staging/: PROJECT_NAME_HYPHEN-ingress.yaml  kustomization.yaml  namespace.yaml
organic_toolkit_hub/: __init__.py  app.py  constants.py  file_io.py  log_utility.py  main_gui.py  render_static.py  utils.py
organic_toolkit_hub/gui/: env.py  get.py  post.py  setup.py
organic_toolkit_hub/templates/content/: psdi-common-header.html
psdi_organic_toolkit/: constants.py  log_utility.py  main_gui.py  render_static.py  utils.py
psdi_organic_toolkit/gui/: env.py  get.py  setup.py
psdi_organic_toolkit/static/css/: index.css  psdi-common.css
psdi_organic_toolkit/static/js/: cookieconsent-config.js  index.js  psdi-common.js
psdi_organic_toolkit/templates/: documentation.html  index.html
psdi_organic_toolkit/templates/content/: header-links.html  psdi-common-footer.html  psdi-common-header.html
psdi_organic_toolkit/templates/parent/: layout.htm
public/: index.html
scripts/: fetch-common-style.conf  fetch-common-style.sh  rename_project.py  set-flask-urls.sh
tests/gui/: gui_test.py
tests/python/: example_test.py
